<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:focusable="true"
    android:focusableInTouchMode="true" 
    android:orientation="vertical">

    <LinearLayout
       android:id="@+id/FromEmailLayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:orientation="horizontal" >
    <TextView
        android:id="@+id/textViewFromEmail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:text="@string/from_email" />

    <EditText
        android:id="@+id/editTextFromEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:padding = "10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/from_email_hint"
        android:textColor="#000000" >  
    </EditText>
    </LinearLayout>

    <LinearLayout
       android:id="@+id/PasswordLayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:orientation="horizontal" >
    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:text="@string/from_email_password" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:padding = "10dp"
        android:inputType="textPassword"
        android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
       android:id="@+id/ToEmailLayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:orientation="horizontal" >
    <TextView
        android:id="@+id/textViewToEmail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:text="@string/to_email" />

    <EditText
        android:id="@+id/editTextToEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:padding = "10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/to_email_hint"
        android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
       android:id="@+id/SubjectLayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:orientation="horizontal" >
    <TextView
        android:id="@+id/textViewSubject"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:text="@string/subject" />

    <EditText
        android:id="@+id/editTextSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:padding = "10dp"
        android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/BodyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:text="@string/body" />

    <EditText
        android:id="@+id/editTextBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:padding="35dp"
        android:inputType="textMultiLine"
        android:textColor="#000000" />
   </LinearLayout>

   <LinearLayout
       android:id="@+id/AlertIntervalLayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:orientation="horizontal" >
    
       <TextView
        android:id="@+id/textViewAlertInterval"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:text="@string/alert_interval" />
       
       <CheckBox
           android:id="@+id/checkBoxAlertInterval"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/> 
       
       <Spinner
           android:id="@+id/spinner_alert_interval"
           android:layout_width="match_parent"
           android:layout_height="wrap_content" />
       
   </LinearLayout>
   
  
   <LinearLayout
        android:id="@+id/AlertODValuelLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >
       <TextView
        android:id="@+id/textViewAlertODValue"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:text="@string/alert_od_value" />
       
       <CheckBox
           android:id="@+id/checkBoxAlertODValue"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/> 
       
       <EditText
           android:id="@+id/editTextAlertODValue"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:inputType="number"
           android:padding = "10dp"
           android:digits="0123456789."
           android:maxLength="10"
           android:text="@string/alert_od_value_value" >
       </EditText>
       
   </LinearLayout>
   
   <Button
        android:id="@+id/button_ok"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:textSize="10pt"
        android:text="@string/ok" />

</LinearLayout>