<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#FF5577AA"
        android:textSize="12pt"
        android:text="Experiment Script Setting" >
    </TextView>

    <LinearLayout
        android:id="@+id/liner_layout_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/button_add"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@drawable/buttons_script_edit"
            android:text="@string/script_add_step"
            android:textSize="26sp" />

        <Button
            android:id="@+id/button_clear_all"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:textSize="26sp"
            android:background="@drawable/buttons_script_edit"
            android:text="@string/script_clear_all" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:textSize="26sp"
            android:background="@drawable/buttons_script_edit"
            android:text="@string/script_save_script" />

        <Button
            android:id="@+id/button_load"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:textSize="26sp"
            android:background="@drawable/buttons_script_edit"
            android:text="@string/script_load_script" />

    </LinearLayout>

    <ListView
        android:id="@+id/listViewStep"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTitle"
        android:layout_above="@+id/liner_layout_button"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:drawSelectorOnTop="false"
        android:visibility="visible" />

</RelativeLayout>